css/indexCSS.css
body {
  margin-top: 0rem;
}

/* fadeIn */
@keyframes fadeIn {
  0% {
    opacity: 0;
  }

  10% {
    opacity: 0.1;
  }

  20% {
    opacity: 0.2;
  }

  30% {
    opacity: 0.3;
  }

  40% {
    opacity: 0.4;
  }

  50% {
    opacity: 0.5;
  }

  60% {
    opacity: 0.6;
  }

  70% {
    opacity: 0.7;
  }

  80% {
    opacity: 0.8;
  }

  90% {
    opacity: 0.9;
  }

  100% {
    opacity: 1;
  }
}

/* fadeIn2 */
@keyframes fadeIn2 {
  0% {
    background-color: transparent;
    color: white;
  }

  100% {
    background-color: #e7e7e7;
    color: black;
  }
}

@keyframes button {
  100% {
    transform: rotate(360deg);
  }
}

#navbar {
  background-color: #222831;
  width: 100%;
  animation: fadeIn 2s;
  min-height: 60px;
  max-height: 60px;
}

#h {
  float: right;
}

.navbar-brand {
  font-weight: 900;
}

.bg-dark {
  background-color: rgba(20, 20, 20, 0.7) !important;
  transition: 200ms ease;
}

.bg-dark.scrolled {
  background: black !important;
}

.rug_logo {
  width: 7%;
}

.btn-light {
  animation: fadeIn2 2s, fadeIn 2s, button 3.4s;
  margin-top: 3rem;
  padding: 1rem 4rem;
  transition-duration: 0.6s;
  border: 2px solid #e7e7e7;
  font-weight: 900;
  text-decoration: none;
  background-color: none;
  font-size: 1.2rem;
}

.btn-light:hover {
  color: white;
  background-color: transparent;
}

.btn-dark {
  animation: fadeIn 4s fadeIn2 4s;
  background-color: #e7e7e7;
  color: black;
  font-weight: bold;
  padding: 1rem 2rem;
  transition-duration: 0.6s;
  border: 3px solid #e7e7e7;
}

.btn-dark:hover {
  color: white;
  background-color: transparent;
  border: 3px solid #e7e7e7;
}

.button-main {}

/* index */
.bg-image {
  background-image: linear-gradient(rgba(0.3, 0, 0.4, 0.6),
      rgba(0.9, 0, 0, 0.6)), url("../images/rug-bg.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  position: relative;
  padding-bottom: 18.5rem;
  padding-top: 18.5rem;
}

/* gallery */
.bg-image2 {
  background-image: linear-gradient(rgba(0.3, 0, 0.4, 0.45),
      rgba(0.9, 0, 0, 0.5)), url("../images/bg-gallery2.jpg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

/* storEvents */
.bg-image3 {
  background-image: linear-gradient(rgba(0.3, 0, 0.4, 0.45),
      rgba(0.9, 0, 0, 0.5)), url("../images/bg5.jpg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

/* otherEvents */
.bg-image4 {
  background-image: linear-gradient(rgba(0.3, 0, 0.4, 0.45),
      rgba(0.9, 0, 0, 0.5)), url("../images/bg444.jpg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

/* aboutUs */
.bg-image5 {
  background-image: linear-gradient(rgba(0.3, 0, 0.4, 0.45),
      rgba(0.9, 0, 0, 0.5)), url("../images/bg-white-blue.jpg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

/* contactUs */
.bg-image6 {
  background-image: linear-gradient(rgba(0.3, 0, 0.4, 0.45),
      rgba(0.9, 0, 0, 0.5)), url("../images/bg-rose.jpg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

.heading1 {
  animation: fadeIn 1s;
  color: white;
  text-align: center;
  padding-top: 1rem;
  padding-bottom: 0.3rem;
}

.heading1 h1 {
  font-size: 2.3em;
  font-weight: 900;
}

.heading-event {
  animation: fadeIn 1s;
  color: white;
  text-align: center;
  padding-top: 7rem;
  padding-bottom: 6rem;
}

.heading-event h1 {
  font-size: 2.3em;
  font-weight: 900;
}

.heading1 hr {
  width: 100px;
  /* height: 1px; */
  border-width: 2.5px;
  background-color: black;
  border-radius: 9px;
  opacity: 0.86;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 1.2rem;
}

.paragraph1 {
  font-size: 1.5em;
  color: white;
  text-align: center;
  animation: fadeIn 2s;
  padding-top: 0rem;
}

.paragraph1 h2 {
  font-size: 1.3em;
  font-weight: bold;
  color: white;
  text-align: left;
  animation: fadeIn 2s;
  padding-bottom: 1rem;
  padding-top: 1rem;
  padding-left: 4rem;
  padding-right: 4rem;
}

.paragraph1 p {
  font-size: 0.8em;
  font-weight: normal;
  color: white;
  text-align: center;
  animation: fadeIn 2s;
  padding-top: 0rem;
  padding-left: 4rem;
  padding-right: 4rem;
  text-align: justify;
}

.section2 {
  animation: fadeIn 1s;
  padding-top: 4rem;
  padding-bottom: 4rem;
}

.bg-text2 {
  background-color: inherit;
}

.paragraph2 {
  padding-top: 2rem;
  text-align: justify, center;
}

.paragraph-main {
  padding-left: 10rem;
  padding-right: 10rem;
  padding-top: 2rem;
  text-align: justify, center;
}

.bg-text2 h1 {
  font-weight: 900;
  font-size: 2rem;
}

.section-grey {
  padding-top: 2rem;
  padding-bottom: 2rem;
  background-color: #f2f2f2;
}

.heading3 {
  margin-bottom: 1rem;
  margin-top: 1rem;
}

.heading3 h1 {
  font-size: 2.4rem;
  font-weight: 900;
}

.text3 {
  font-size: 90px;
}

.map {
  width: 900px;
  height: 450px;
}

/* Responsive Location */
@media(max-width: 895px) {
  .map {
    width: 90%;
    height: 90%;
  }
}

#carouselExampleFade {
  padding-top: 4rem;
  padding-bottom: 5rem;
  animation: fadeIn 1s;
  width: 57%;
}

#txt-gallery {
  margin-right: 0.8rem;
  padding-right: 7rem;
  padding-left: -3rem;
  font-size: 1.1rem;
  text-align: justify;
}

/* Responsive SlideShow  */
@media(max-width: 760px) {
  #carouselExampleFade {
    width: 100%;
    padding-bottom: 20rem;
    margin-left: 0rem;
  }

  #txt-gallery {
    margin-right: 0rem;
    padding-right: 0rem;
  }
}

.carousel-caption p {
  background-color: #353636;
  position: relative;
  overflow: hidden;
  opacity: 0.85;
  color: white;
  width: 70px;
  padding: 9px;
  border-radius: 5.75px;
  text-align: center;
  font-size: 1.3rem;
}

.carousel-control-prev {
  background-color: #353636;
  width: 60px;
  color: white;
  border: 0px solid black;
  box-shadow: 0px 0px 30px #353636;
}

.carousel-control-next {
  background-color: #353636;
  width: 60px;
  color: white;
  border: 0px solid black;
  box-shadow: 0px 0px 30px #353636;
}

.dropdown-menu {
  opacity: 0.9;
  transition: 0.8s;
}

.dropdown-menu:hover {
  opacity: 1;
}

.dropdown-item {
  background-color: white;
  color: black;
  transition-duration: 0.85s;
}

.dropdown-item:hover {
  transition-duration: 0.80s;
  background-color: #0d0d0d;
  color: white;
}

#store-active {
  background-color: transparent !important;
  color: red;
  font-weight: bold;
  letter-spacing: 1px;
}

.table-dark {}

.col-sm-4 p {
  padding-right: 1.8rem;
  text-align: justify;
}

.heading-other-event {
  animation: fadeIn 1s;
  color: white;
  text-align: center;
  padding-top: 6rem;
  padding-bottom: 5rem;
  text-align: center;
}

.heading-other-event h1 {
  font-size: 2.3em;
  font-weight: 900;
}

#video {
  float: none;
  margin-left: auto;
  margin-right: auto;
}

.section-video {
  background-color: #ebebeb;
  animation: fadeIn 1s;
  padding-top: 2rem;
  padding-bottom: 4rem;
}

.heading3 img {
  width: 380px;
  height: 380px;
}

.img-modern {
  position: relative;
  width: 50%;
}

.image {
  opacity: 1;
  display: block;
  width: 100%;
  height: auto;
  transition: .5s ease;
  backface-visibility: hidden;
}

.middle {
  transition: .5s ease;
  opacity: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  text-align: center;
}

.img-modern:hover .image {
  -webkit-filter: brightness(60%);
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  -ms-transition: all 0.5s ease;
  transition: all 0.5s ease;
}

.img-modern:hover .middle {
  opacity: 1;
}

.text {
  color: white;
  font-size: 36px;
  font-weight: bold;
  text-shadow: 2px 2px 9px black;
}

#gheisar {
  margin-top: 4.75rem;
  /* margin-left: 69rem; */
}

.image-gheisar {
  width: 650px;
}

#the-story {
  animation: fadeIn 2s;
  color: white;
  font-weight: bold;
  /* margin-top: 7rem; */
  /* margin-left: 27rem; */
}

.content-box {
  position: relative;
  width: 100%;
  /* min-height:350px; */
}

.img-box.left {
  position: absolute;
  top: -15px;
  right: -15px;
  bottom: -15px;
  width: calc(50vw - 15px);
}

#contact-space {
  padding-top: 6rem;
  font-size: 1.5em;
}

.bg-text {
  padding-bottom: 5rem;
}

.bg-text-contact {
  padding-bottom: 20rem;
}

.form-control {
  margin-top: 0.3rem;
}

.contact {
  padding: 2%;
  height: 400px;
}

.col-md-10 {
  background: #FCFCFC;
  padding: 3%;
  border-radius: 0.5rem;
}

.contact-form label {
  font-weight: 600;
}

.contact-form button {
  font-weight: 600;
  width: 25%;
}

.contact-form button:focus {
  box-shadow: none;
}

@media only screen and (max-width: 768px) {
  .img-box.left {
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    bottom: 0px;
    width: 100%;
    background: red;
  }

  #carouselExampleFade {
    width: 100%;
    padding-bottom: 20rem;
    margin-left: 0rem;
  }
}

@media only screen and (min-width: 768px) {
  .col-md-10 {
    margin-left: 8.5%;
  }
}

.fb-ic, .gplus-ic, .ins-ic {
  color: black;
}

#underline {
  list-style: none;
  position: relative;
  display: inline;
  margin-right: 10px;
}

#underline::after {
  content: '';
  position: absolute;
  left: 50%;
  bottom: -2px;
  width: 0px;
  height: 1.3px;
  background: white;
  transition: all 0.35s;
}

#underline:hover::after {
  width: 100%;
  left: 0;
}

